Add viewport scale to example head

--- a/example/src/index.html
+++ b/example/src/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <head>
 	<title>Super Responsive Table</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="example.css">
+
 </head>
 <body>
 	<div class="container">
